--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@
 .container_nav a:not(:nth-child(1)) {
     text-decoration: none;
     display: block;
+    text-align: right;
     float: right;
     padding: 15px;
     margin-top: 14px;
