--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
     background: url(../images/banner.png);
 }
 .container_nav {
+    position: fixed;
     width: 1425px;
     height: 80px;
     background: linear-gradient(180deg, rgba(212, 215, 218, 0.7) 0%, rgba(255, 255, 255, 0) 100%), rgba(242, 242, 242, 0.7);
@@ -28,3 +29,31 @@
     color: honeydew;
     text-decoration: underline;
 }
+
+/**********product style****************/
+
+.service1 {
+    display: inline-block;
+    width: 300px;
+    margin: 80px;
+}
+.our_product {
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 26px;
+    padding: 15px;
+}
+.service1 h5 {
+    text-align: center;
+    font-size: 20px;
+    margin: 10px;
+}
+.service1 a {
+    text-decoration: none;
+    color: black;
+}
+
+.service1 a:hover {
+    text-decoration: underline;
+}
+
