--- a/contactus/style.css
+++ b/contactus/style.css
@@ -23,6 +23,8 @@
     padding: 15px;
     margin-top: 14px;
     color: black;
+    border-top-left-radius: 20px;
+    border-bottom-right-radius: 20px;
 }
 .container_nav a:hover:not(:nth-child(1)) {
     background-color: grey;
