--- a/css/style.css
+++ b/css/style.css
@@ -59,3 +59,91 @@
     text-decoration: underline;
 }
 
+/***********     footer styling     ***********/
+
+.footer {
+    width: 1425px;
+    height: 350px;
+    background-color: rgba(212, 215, 218, 0.7);
+}
+.foot {
+    width: 1425px;
+    height: 70px;
+    background: linear-gradient(to right, silver, grey,gray);
+
+}
+.footer .foota {
+    display: inline-block;
+    padding: 20px;
+    width: 400px;
+    height: 270px;
+    margin: 10px;
+}
+.footer .foota h3, p{
+    text-transform: capitalize;
+    text-align: center;
+    padding: 5px;
+    text-align: justify;
+}
+
+.foot h3 {
+    text-align: center;
+    padding-top: 25px;
+}
+
+/************about section styling*********** */
+
+.about p{
+    text-align: justify;
+    margin-left: 420px;
+    padding: 15px;
+    font-family: cursive;
+    margin-bottom: 15px;
+    font-size: 20px;
+}
+
+.about h1 {
+    text-align: center;
+    margin-top: 15px;
+    font-size: 45px;
+    text-decoration: wavy;
+    padding: 5px;   
+}
+/************learn more styling ************/
+
+.learnmore h2 {
+    text-align: center;
+    text-transform: capitalize;
+    padding: 20px;
+}
+.team_img {
+    width: 300px;
+    height: 300px;
+    background-color: gray;
+    display: inline-block;
+    padding-left: 15px;
+    margin-left: 25px;
+    border-radius: 10px;
+    margin-bottom: 25px;
+}
+.team_img h2 {
+    text-transform: capitalize;
+    
+}
+.team_img:hover {
+    transform: scale(1.2);
+}
+.team h2 {
+    text-align: center;
+    text-transform: capitalize;
+    margin-bottom: 20px;
+}
+.learnmore .more {
+    display: inline-block;
+    width: 600px;
+    height: 400px;
+    border-radius: solid 2px red;
+    background-color: rgba(212, 215, 218, 0.7);
+    margin: 50px;
+}
+
