--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@
 .team_img {
     width: 300px;
     height: 300px;
-    background-color: gray;
+    background-color: #ffffff;
     display: inline-block;
     padding-left: 15px;
     margin-left: 25px;
@@ -142,8 +142,19 @@
     display: inline-block;
     width: 600px;
     height: 400px;
-    border-radius: solid 2px red;
+    border-radius: 15px;
     background-color: rgba(212, 215, 218, 0.7);
     margin: 50px;
+}
+.learnmore .more p {
+    text-align: justify;
+    padding: 10px;
+}
+.team_img img {
+    border-radius: 50%;
+    text-align: center;
+}
+.team_img p {
+    text-align: center;
 }
 
