--- a/about_us/style.css
+++ b/about_us/style.css
@@ -1,17 +1,19 @@
 /*******default style*********/
 * {
     margin: 0px;
+    padding: 0px;
 }
 /*********section navbar styling*********/
 .navbar {
     display: absolute;
-    width: 1425px;
+    width: 100%;
     height: 500px;
     background: url(../about_us/images/about.png);
+    background-size: cover;
 }
 .container_nav {
     position: fixed;
-    width: 1425px;
+    width: 100%;
     height: 80px;
     background: linear-gradient(180deg, rgba(212, 215, 218, 0.7) 0%, rgba(255, 255, 255, 0) 100%), rgba(242, 242, 242, 0.7);
 }
@@ -34,7 +36,7 @@
 /***********     footer styling     ***********/
 
 .footer {
-    width: 1425px;
+    width: 100%;
     height: 350px;
     background-color: rgba(212, 215, 218, 0.7);
 }
@@ -80,4 +82,52 @@
     font-size: 45px;
     text-decoration: wavy;
     padding: 5px;   
+}
+
+/* *********responsive******** */
+@media only screen and (max-width:820px) {
+    .navbar {
+        background: url(../about_us/images/about.png);
+        background-size: contain;
+        width: 100%;
+    }
+   
+    .navbar .container_nav {
+        width: 100%;
+        height: auto;
+        background: linear-gradient(180deg, rgba(212, 215, 218, 0.7) 0%, rgba(255, 255, 255, 0) 100%), rgba(242, 242, 242, 0.7);
+    }
+    .navbar .container_nav img {
+        width: 30%;
+        float: left;
+    }
+    .navbar .container_nav a:not(:nth-child(1)) {
+        width: 60%;
+        float: right;
+    }
+    /********** footer section *********/
+    .footer {
+        width: 100%;
+        height: auto;
+    }
+    .footer .foota:not(:nth-child(3)) {
+        width: 35%;
+    }
+    .footer .foota:nth-child(3) {
+        width: 85%;
+    }
+    .foot {
+        width: 100%;
+    }
+    /* ********   about us  ************ */
+    .about {
+        width: 100%;
+        height: auto;
+    }
+    .about p {
+        width: 90%;
+        height: auto;
+        margin-left: 0px;
+        
+    }
 }
