--- a/contactus/style.css
+++ b/contactus/style.css
@@ -1,11 +1,12 @@
 /* **********default style*********** */
 * {
     margin: 0px;
+    padding: 0px;
 }
 /*********section navbar styling*********/
 .navbar {
     display: absolute;
-    width: 1425px;
+    width: 100%;
     height: 500px;
     background: url(images/contact_b.png);
 }
@@ -89,7 +90,7 @@
 /***********     footer styling     ***********/
 
 .footer {
-    width: 1425px;
+    width: 100%;
     height: 350px;
     background-color: rgba(212, 215, 218, 0.7);
 }
@@ -118,4 +119,55 @@
 .foot h3 {
     text-align: center;
     padding-top: 25px;
+}
+
+/* *********responsive******** */
+@media(max-width:820px) {
+    .navbar {
+        width: 100%;
+        background: url(images/contact_b.png);
+        background-size: cover;
+        
+    }
+    .navbar .container_nav {
+        width: 100%;
+        height: auto;
+        background: linear-gradient(180deg, rgba(212, 215, 218, 0.7) 0%, rgba(255, 255, 255, 0) 100%), rgba(242, 242, 242, 0.7);
+    }
+    .navbar .container_nav img {
+        width: 30%;
+        float: left;
+    }
+    .navbar .container_nav a:not(:nth-child(1)) {
+        width: 60%;
+        float: right;
+    }
+    /********** footer section *********/
+    .footer {
+        width: 100%;
+        height: auto;
+    }
+    .footer .foota:not(:nth-child(3)) {
+        width: 35%;
+    }
+    .footer .foota:nth-child(3) {
+        width: 85%;
+    }
+    .foot {
+        width: 100%;
+    }
+    /********* contact info section *********/
+    .sectionContact {
+        width: 100%;
+        height: auto;
+    }
+    .sectionContact .contact {
+        width: 100%;
+        height: auto;
+    }
+    .sectionContact .card {
+        margin-left: 50px;
+        margin-top: 30px;
+        width: 80%;
+    }
 }
