--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,18 @@
 /*******default style*********/
 * {
     margin: 0px;
+    padding: 0px;
 }
 /*********section navbar styling*********/
 .navbar {
     display: absolute;
-    width: 1425px;
+    width: 100%;
     height: 500px;
     background: url(../images/banner.png);
 }
 .container_nav {
     position: fixed;
-    width: 1425px;
+    width: 100%;
     height: 80px;
     background: linear-gradient(180deg, rgba(212, 215, 218, 0.7) 0%, rgba(255, 255, 255, 0) 100%), rgba(242, 242, 242, 0.7);
 }
@@ -62,7 +63,7 @@
 /***********     footer styling     ***********/
 
 .footer {
-    width: 1425px;
+    width: 100%;
     height: 350px;
     background-color: rgba(212, 215, 218, 0.7);
 }
@@ -158,3 +159,70 @@
     text-align: center;
 }
 
+@media(max-width:820px) {
+    .navbar {
+        width: 100%;
+        background: url(../images/banner.png);
+        background-size: cover;
+    }
+   
+    .navbar .container_nav {
+        width: 100%;
+        height: auto;
+        background: linear-gradient(180deg, rgba(212, 215, 218, 0.7) 0%, rgba(255, 255, 255, 0) 100%), rgba(242, 242, 242, 0.7);
+    }
+    .navbar .container_nav img {
+        width: 30%;
+        float: left;
+    }
+    .navbar .container_nav a:not(:nth-child(1)) {
+        width: 60%;
+        float: right;
+    }
+    /************section ptoduct************** */
+    .brand {
+        width: 100%;
+        height: auto;
+    }
+    .service1 img {
+        width: 85%;
+    }
+/* learn more */
+    .learnmore {
+        width: 100%;
+        height: auto;
+    }
+    .learnmore .more {
+        width: 85%;
+    }
+    /*********** meet the team *********/
+    .meet {
+        width: 100%;
+        height: auto;
+    }
+    .meet .team {
+        width: 100%;
+        height: auto;
+    }
+    .meet .team_img:nth-child(even) {
+        width: 35%;
+    }
+    .meet .team_img:nth-child(odd) {
+        width: 35%;
+    }
+    /********** footer section *********/
+    .footer {
+        width: 100%;
+        height: auto;
+    }
+    .footer .foota:not(:nth-child(3)) {
+        width: 35%;
+    }
+    .footer .foota:nth-child(3) {
+        width: 85%;
+    }
+    .foot {
+        width: 100%;
+    }
+
+}
