--- a/gallery/css/style.css
+++ b/gallery/css/style.css
@@ -9,7 +9,7 @@ body {
 /*********section navbar styling*********/
 .navbar {
     display: absolute;
-    width: 1425px;
+    width: 100%;
     height: 500px;
     background: url(../images/banner.png);
 }
@@ -80,4 +80,47 @@ body {
 .images:hover {
     cursor: pointer;
     transform: scale(1.5);
+}
+
+@media(max-width:820px) {
+
+   
+    .navbar .container_nav {
+        width: 100%;
+        height: auto;
+        background: url(../images/banner.png);
+        background: linear-gradient(180deg, rgba(212, 215, 218, 0.7) 0%, rgba(255, 255, 255, 0) 100%), rgba(242, 242, 242, 0.7);
+    }
+    .navbar .container_nav img {
+        width: 30%;
+        float: left;
+    }
+    .navbar .container_nav a:not(:nth-child(1)) {
+        width: 60%;
+        float: right;
+    }
+    /********** footer section *********/
+    .footer {
+        width: 100%;
+        height: auto;
+    }
+    .footer .foota:not(:nth-child(3)) {
+        width: 35%;
+    }
+    .footer .foota:nth-child(3) {
+        width: 85%;
+    }
+    .foot {
+        width: 100%;
+    }
+
+    /********** section gallery ********/
+    .gallery {
+        width: 100%;
+        height: auto;
+    }
+    .gallery .images {
+        width: 40%;
+        height: auto;
+    }
 }
